2008-10-10  Massimiliano Mantione <massi@ximian.com>
	* BaseTypes.cs:
	- Added support for handling the stack trace of each allocation event.
	- Added a DebugProfilerEventHandler which helps detecting decoder bugs.
	* ObjectModel.cs: Likewise.
	* ObjectModel.cs: Likewise.
	* Decoder.cs: Likewise.

2008-09-17  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs: Add "jit time support" to the call stack.
	* EventProcessor.cs: Likewise.

2008-08-21  Massimiliano Mantione <massi@ximian.com>
	* BaseTypes.cs: Added support for correct accounting of allocations
	which happened at JIT time.
	* ObjectModel.cs: Likewise.
	* Decoder.cs: Likewise.
	* EventProcessor.cs: Likewise.

2008-08-20  Massimiliano Mantione <massi@ximian.com>
	* BaseTypes.cs: Added support for directives in the log file.
	* Decoder.cs: Likewise.
	* EventProcessor.cs: Likewise.

2008-08-12  Massimiliano Mantione <massi@ximian.com>
	* Makefile.am: Fixed for integration into mono-tools;

2008-08-05  Massimiliano Mantione <massi@ximian.com>
	* Reader.cs: If the file is truncated "cleanly" do not throw exceptions.

2008-08-04  Massimiliano Mantione <massi@ximian.com>
	Removed .pc file generation.

2008-08-01  Massimiliano Mantione <massi@ximian.com>
	* Makefile.am, profiler-decoder-library.mdp: renamed output assembly.

2008-08-01  Massimiliano Mantione <massi@ximian.com>
	Makefile.am, profiler-decoder-library.pc.in: Regenerated from MonoDevelop.

2008-07-28  Massimiliano Mantione <massi@ximian.com>
	* Decoder.cs: Fixed decoding for the "allocation summaries" feature.

2008-06-18  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs (StackFrame, CallStack): Keep track of stack depth.

2008-06-18  Massimiliano Mantione <massi@ximian.com>
	* ObjectModel.cs (CallStack): Added explicit thread id.
	* EventProcessor.cs: likewise.

2008-06-18  Massimiliano Mantione <massi@ximian.com>
	* BaseTypes.cs: Initial implementation of allocation summaries.
	* Decoder.cs: likewise.
	* ObjectModel.cs: likewise.